<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/fill_half_withdrawal_card"
            tools:context=".view.WithdrawalFragment">


        <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tambah_planning"
                android:textColor="@color/colorWhite"
                android:textSize="35sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
                android:id="@+id/input_card"
                android:layout_width="match_parent"
                app:cardCornerRadius="15dp"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:layout_marginTop="90dp"
                app:cardElevation="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="560dp">

            <TextView
                    android:id="@+id/volume_title"
                    android:layout_width="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:textColor="#000"
                    android:layout_marginTop="15dp"
                    android:textSize="25sp"
                    android:text="@string/volume"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"/>

            <ImageView
                    android:layout_width="146dp"
                    android:src="@drawable/pertalite"
                    android:layout_marginTop="40dp"
                    android:layout_height="122dp"/>
            <ImageView
                    android:layout_width="100dp"
                    android:src="@drawable/pertamax"
                    android:layout_marginTop="100dp"
                    android:layout_marginStart="20dp"
                    android:layout_height="92dp"/>
            <ImageView
                    android:layout_width="105dp"
                    android:src="@drawable/turbo"
                    android:layout_marginTop="156dp"
                    android:layout_marginStart="20dp"
                    android:layout_height="92dp"/>
            <ImageView
                    android:layout_width="100dp"
                    android:src="@drawable/dexlite"
                    android:layout_marginTop="205dp"
                    android:layout_marginStart="20dp"
                    android:layout_height="92dp"/>
            <ImageView
                    android:layout_width="100dp"
                    android:src="@drawable/pertadex"
                    android:layout_marginTop="255dp"
                    android:layout_marginStart="12dp"
                    android:layout_height="92dp"/>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="5dp"
                    android:layout_height="wrap_content">

                <com.google.android.material.card.MaterialCardView
                        android:layout_width="80dp"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="5dp"
                        android:layout_marginStart="165dp"
                        android:layout_marginTop="85dp"
                        android:layout_height="30dp">

                    <EditText
                            android:layout_width="wrap_content"
                            android:background="@drawable/rounded_corner_toggle2"
                            android:hint="0"
                            android:fontFamily="@font/montserrat2"
                            android:textColor="#000"
                            android:layout_gravity="center"
                            android:textAlignment="center"
                            android:textColorHint="#c1c2c4"
                            android:layout_height="wrap_content"/>
                </com.google.android.material.card.MaterialCardView>

                <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/kl"
                        android:textColor="#000"
                        android:layout_marginTop="87dp"
                        android:layout_marginStart="30dp"
                        android:textSize="18sp"
                        android:fontFamily="@font/montserrat2"
                        android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="50dp"
                    android:paddingBottom="5dp"
                    android:layout_height="wrap_content">

                <com.google.android.material.card.MaterialCardView
                        android:layout_width="80dp"
                        app:cardCornerRadius="10dp"
                        android:layout_marginStart="165dp"
                        android:layout_marginTop="85dp"
                        app:cardElevation="5dp"
                        android:layout_height="30dp">

                    <EditText
                            android:layout_width="wrap_content"
                            android:background="@drawable/rounded_corner_toggle2"
                            android:hint="0"
                            android:fontFamily="@font/montserrat2"
                            android:textColor="#000"
                            android:layout_gravity="center"
                            android:textAlignment="center"
                            android:textColorHint="#c1c2c4"
                            android:layout_height="wrap_content"/>
                </com.google.android.material.card.MaterialCardView>

                <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/kl"
                        android:textColor="#000"
                        android:layout_marginTop="87dp"
                        android:layout_marginStart="30dp"
                        android:textSize="18sp"
                        android:fontFamily="@font/montserrat2"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="100dp"
                    android:paddingBottom="5dp"
                    android:layout_height="wrap_content">

                <com.google.android.material.card.MaterialCardView
                        android:layout_width="80dp"
                        app:cardCornerRadius="10dp"
                        android:layout_marginStart="165dp"
                        android:layout_marginTop="85dp"
                        app:cardElevation="5dp"
                        android:layout_height="wrap_content">

                    <EditText
                            android:layout_width="wrap_content"
                            android:background="@drawable/rounded_corner_toggle2"
                            android:hint="0"
                            android:fontFamily="@font/montserrat2"
                            android:textColor="#000"
                            android:layout_gravity="center"
                            android:textAlignment="center"
                            android:textColorHint="#c1c2c4"
                            android:layout_height="wrap_content"/>
                </com.google.android.material.card.MaterialCardView>

                <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/kl"
                        android:textColor="#000"
                        android:layout_marginTop="87dp"
                        android:layout_marginStart="30dp"
                        android:textSize="18sp"
                        android:fontFamily="@font/montserrat2"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="150dp"
                    android:paddingBottom="5dp"
                    android:layout_height="wrap_content">

                <com.google.android.material.card.MaterialCardView
                        android:layout_width="80dp"
                        app:cardCornerRadius="10dp"
                        android:layout_marginStart="165dp"
                        android:layout_marginTop="85dp"
                        app:cardElevation="5dp"
                        android:layout_height="wrap_content">

                    <EditText
                            android:layout_width="wrap_content"
                            android:background="@drawable/rounded_corner_toggle2"
                            android:hint="0"
                            android:fontFamily="@font/montserrat2"
                            android:textColor="#000"
                            android:layout_gravity="center"
                            android:textAlignment="center"
                            android:textColorHint="#c1c2c4"
                            android:layout_height="wrap_content"/>
                </com.google.android.material.card.MaterialCardView>

                <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/kl"
                        android:textColor="#000"
                        android:layout_marginTop="87dp"
                        android:layout_marginStart="30dp"
                        android:textSize="18sp"
                        android:fontFamily="@font/montserrat2"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/volume_input"
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="200dp"
                    android:paddingBottom="5dp"
                    android:layout_height="wrap_content">

                <com.google.android.material.card.MaterialCardView
                        android:layout_width="80dp"
                        app:cardCornerRadius="10dp"
                        android:layout_marginStart="165dp"
                        android:layout_marginTop="85dp"
                        app:cardElevation="5dp"
                        android:layout_height="wrap_content">

                    <EditText
                            android:layout_width="wrap_content"
                            android:background="@drawable/rounded_corner_toggle2"
                            android:hint="0"
                            android:fontFamily="@font/montserrat2"
                            android:textColor="#000"
                            android:layout_gravity="center"
                            android:textAlignment="center"
                            android:textColorHint="#c1c2c4"
                            android:layout_height="wrap_content"/>
                </com.google.android.material.card.MaterialCardView>

                <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/kl"
                        android:textColor="#000"
                        android:layout_marginTop="87dp"
                        android:layout_marginStart="30dp"
                        android:textSize="18sp"
                        android:fontFamily="@font/montserrat2"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:padding="2dp"
                    android:layout_height="wrap_content">

                <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/masukkan_so"
                        android:fontFamily="@font/montserrat"
                        android:textSize="20sp"
                        android:textColor="#000"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="350dp"
                        android:layout_height="wrap_content"/>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="35dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_height="wrap_content">

                    <EditText
                            android:layout_width="match_parent"
                            android:background="@drawable/rounded_corner_toggle2"
                            android:hint="No. SO"
                            android:fontFamily="@font/montserrat2"
                            android:textColor="#000"
                            android:gravity="center"
                            android:textColorHint="#c1c2c4"
                            android:inputType="number"
                            android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/keterangan"
                        android:fontFamily="@font/montserrat"
                        android:textSize="20sp"
                        android:textColor="#000"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="25dp"
                        android:layout_height="wrap_content"/>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/type_inputlayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:elevation="4dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="35dp"
                        android:textColorHint="#c1c2c4">

                    <AutoCompleteTextView
                            android:id="@+id/type_dropdown"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/rounded_corner_toggle2"
                            android:focusable="false"
                            android:fontFamily="@font/montserrat2"
                            android:hint="@string/keterangan" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
                android:id="@+id/button_confirm_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="35dp"
                app:layout_constraintTop_toBottomOf="@+id/input_card"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="horizontal">


            <com.google.android.material.button.MaterialButton
                    android:id="@+id/reject_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#DA251C"
                    android:fontFamily="@font/montserrat2"
                    android:text="@string/batal"
                    app:cornerRadius="15dp" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/accept_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="#85C226"
                    android:text="@string/kirim"
                    app:cornerRadius="15dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
